--- a/public/index.html
+++ b/public/index.html
@@ -1,154 +1,58 @@
 <!-- public/index.html -->
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Messenger App (async/await)</title>
-    <style>
-      /* Basic styling for the messenger app */
-      body {
-        font-family: Arial, sans-serif;
-        background-color: #f2f2f2;
-        margin: 0;
-        padding: 0;
-      }
-      #chat {
-        width: 500px;
-        margin: 50px auto;
-        background-color: #fff;
-        border: 1px solid #ccc;
-        padding: 20px;
-        box-shadow: 0 0 10px rgba(0,0,0,0.1);
-      }
-      #messages {
-        list-style-type: none;
-        padding: 0;
-        max-height: 300px;
-        overflow-y: auto;
-        margin-bottom: 20px;
-      }
-      #messages li {
-        padding: 8px 10px;
-        border-bottom: 1px solid #eee;
-      }
-      .input-container {
-        display: flex;
-        gap: 10px;
-        margin-bottom: 10px;
-      }
-      .input-container input[type="text"] {
-        flex: 1;
-        padding: 10px;
-        border: 1px solid #ccc;
-        border-radius: 3px;
-      }
-      #sendBtn {
-        padding: 10px 20px;
-        border: none;
-        background-color: #007bff;
-        color: #fff;
-        border-radius: 3px;
-        cursor: pointer;
-      }
-      #sendBtn:hover {
-        background-color: #0056b3;
-      }
-    </style>
-  </head>
-  <body>
-    <div id="chat">
-      <ul id="messages"></ul>
-      <!-- Input fields (without using a <form> element) -->
-      <div class="input-container">
-        <input id="username" type="text" placeholder="Your name" required />
-      </div>
-      <div class="input-container">
-        <input
-          id="message"
-          type="text"
-          placeholder="Type your message"
-          required
-          autocomplete="off"
-        />
-        <button id="sendBtn" type="button">Send</button>
-      </div>
-    </div>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title> reaction timer </title>
+  <style>
+    body { text-align: center; font-family: Arial, sans-serif; }
+    #reactionBtn { padding: 20px; font-size: 20px; margin-top: 50px; }
+  </style>
+</head>
+<body>
+  <h1> reaction timer </h1>
+  <button id="reactionBtn"> Start Test </button> <!-- Reaction timer button -->
+  <p id="message"></p> <!-- Display reaction time messages -->
+  <script>
+    let startTime;
+    let sessionId = Math.random().toString(36).substring(7);
+    const button = document.getElementById("reactionBtn");
+    const message = document.getElementById("message");
 
-    <script>
-      // DOM element references
-      const usernameInput = document.getElementById("username");
-      const messageInput = document.getElementById("message");
-      const sendBtn = document.getElementById("sendBtn");
-      const messagesList = document.getElementById("messages");
+    // Event listener for button click
+    button.addEventListener("click", async () => {
+      if (button.textContent === "Start Test") {
+        message.textContent = "Wait for the color change...";
+        button.style.backgroundColor = "pink";
 
-      /**
-       * Asynchronously fetches all messages from the server and updates the messages list.
-       */
-      async function fetchMessages() {
-        try {
-          const response = await fetch("/messages");
-          if (!response.ok) {
-            throw new Error(`HTTP error! Status: ${response.status}`);
-          }
-          const data = await response.json();
-          // Clear and update the messages list
-          messagesList.innerHTML = "";
-          data.messages.forEach((msg) => {
-            const li = document.createElement("li");
-            li.textContent = `${msg.username}: ${msg.message}`;
-            messagesList.appendChild(li);
-          });
-          // Scroll to the bottom of the list
-          messagesList.scrollTop = messagesList.scrollHeight;
-        } catch (error) {
-          console.error("Error fetching messages:", error);
-        }
+        let response = await fetch("/start");
+        let data = await response.json();
+
+        setTimeout(() => {
+          button.style.backgroundColor = "blue";
+          button.textContent = "Click Here!";
+          startTime = Date.now(); // Record time when color changes
+        }, data.startTime - Date.now());
+
+      } else {
+        let reactionTime = Date.now() - startTime;
+        message.textContent = `Time: ${reactionTime} ms`;
+
+        fetch("/submit", { 
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({ reactionTime, sessionId }),
+        })
+        .then(res => res.json())
+        .then(data => {
+          message.textContent += ` | Best: ${data.bestTime} ms`;
+        });
+
+        button.textContent = "Start Test"; //
+        button.style.backgroundColor = ""; //
       }
-
-      /**
-       * Asynchronously sends a new message to the server.
-       */
-      async function sendMessage() {
-        const username = usernameInput.value.trim();
-        const message = messageInput.value.trim();
-
-        // Do not send if username or message is empty.
-        if (!username || !message) {
-          return;
-        }
-
-        try {
-          const response = await fetch("/messages", {
-            method: "POST",
-            headers: {
-              "Content-Type": "application/json",
-            },
-            body: JSON.stringify({ username, message }),
-          });
-          if (!response.ok) {
-            throw new Error(`HTTP error! Status: ${response.status}`);
-          }
-          // Clear the message input after a successful send
-          messageInput.value = "";
-        } catch (error) {
-          console.error("Error sending message:", error);
-        }
-      }
-
-      // Listen for a click event on the Send button.
-      sendBtn.addEventListener("click", sendMessage);
-
-      // Also allow sending a message by pressing the Enter key in the message input.
-      messageInput.addEventListener("keydown", (event) => {
-        if (event.key === "Enter") {
-          sendMessage();
-        }
-      });
-
-      // Poll for new messages every 2 seconds
-      setInterval(fetchMessages, 2000);
-      // Initial fetch on page load
-      fetchMessages();
-    </script>
-  </body>
+    });
+  </script>
+</body>
 </html>
