--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,8 @@
 </head>
 <body>
   <h1> Reaction Timer </h1>
-  <button id="reactionBtn"> Start Test </button> <!-- Reaction timer button --> //doublecheck sizing for button
+  <button id="reactionBtn"> Start Test </button> <!-- Reaction timer button --> 
+  //doublecheck sizing for button
   <p id="message"></p> <!-- Display reaction time messages -->
   <script>
     let startTime;
