--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title> reaction timer </title>
+  <title> Reaction Timer </title>
   <style>
     body { text-align: center; font-family: Arial, sans-serif; }
     #reactionBtn { padding: 20px; font-size: 20px; margin-top: 50px; }
