--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
 
     // Event listener for button click
     button.addEventListener("click", async () => {
-      if (button.textContent === "Click here to start the test") {
+      if (button.textContent === "Start Test") {
         message.textContent = "Wait for button to change to orange";
         button.style.backgroundColor = "pink";
 
