--- a/public/index.html
+++ b/public/index.html
@@ -7,51 +7,54 @@
   <title> Reaction Timer </title>
   <style>
     body { text-align: center; font-family: Arial, sans-serif; }
-    #reactionBtn { padding: 20px; font-size: 20px; margin-top: 50px; }
+    button { padding: 20px; font-size: 20px; margin: 20px; }
+    #startBtn { background-color: rgb(255, 166, 181); }
+    #stopBtn { background-color: #89CFF0; }
   </style>
 </head>
 <body>
   <h1> Reaction Timer </h1>
-  <button id="reactionBtn"> Start Test </button> <!-- Reaction timer button --> 
-  <p id="message"></p> <!-- Display reaction time messages -->
+  <button id="startBtn"> Start Test </button> 
+  <button id="stopBtn" disabled> Stop Test </button>
+  <p id="message"></p>
   <script>
     let startTime;
     let sessionId = Math.random().toString(36).substring(7);
-    const button = document.getElementById("reactionBtn");
+    const startBtn = document.getElementById("startBtn");
+    const stopBtn = document.getElementById("stopBtn");
     const message = document.getElementById("message");
 
-    // Event listener for button click
-    button.addEventListener("click", async () => {
-      if (button.textContent === "Start Test") {
-        message.textContent = "Wait for button to change to orange";
-        button.style.backgroundColor = "pink";
+    startBtn.addEventListener("click", async () => {
+      message.textContent = "Wait for the button to change color";
+      startBtn.disabled = true;
+      stopBtn.disabled = true;
 
-        let response = await fetch("/start");
-        let data = await response.json();
+      let response = await fetch("/start");
+      let data = await response.json();
 
-        setTimeout(() => {
-          button.style.backgroundColor = "orange";
-          button.textContent = "Click here now!!!";
-          startTime = Date.now(); // Record time when color changes!! diff of when colour changes and time clicks
-        }, data.startTime - Date.now());
+      setTimeout(() => {
+        stopBtn.disabled = false;
+        message.textContent = "Click Stop Now!";
+        startTime = Date.now();
+      }, data.startTime - Date.now());
+    });
 
-      } else {
-        let reactionTime = Date.now() - startTime;
-        message.textContent = `Time: ${reactionTime} ms`;
+    stopBtn.addEventListener("click", async () => {
+      let reactionTime = Date.now() - startTime;
+      message.textContent = `Time: ${reactionTime} ms`;
 
-        fetch("/submit", { 
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({ reactionTime, sessionId }),
-        })
-        .then(res => res.json())
-        .then(data => {
-          message.textContent += ` | Best: ${data.bestTime} ms`;
-        });
+      fetch("/submit", { 
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({ reactionTime, sessionId }),
+      })
+      .then(res => res.json())
+      .then(data => {
+        message.textContent += ` | Best: ${data.bestTime} ms`;
+      });
 
-        button.textContent = "Start Test"; //
-        button.style.backgroundColor = ""; //
-      }
+      startBtn.disabled = false;
+      stopBtn.disabled = true;
     });
   </script>
 </body>
